--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@/*": ["./src/*"],
       "@/resources/*": ["./src/features/resources/server"],
       "@/shared/*": ["./src/shared/*"],
-      "@/strapi/*": ["./src/core/strapi/*"]
+      "@/strapi/*": ["./src/core/strapi/*"],
+      "@/framer":["./src/features/framer-motion/index"]
     }
   },
   "include": [
