--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "16.1.1",
+    "framer-motion": "^12.29.2",
+    "next": "^16.1.6",
     "qs": "^6.14.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
