--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
@@ -14,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
     "next": "^16.1.6",
+    "next-sitemap": "^4.2.3",
     "qs": "^6.14.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
