--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,6 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     "src/features/page-builder/data/components/sections/heroStats"
-  ],
+, "next-sitemap.comfig.js"  ],
   "exclude": ["node_modules"]
 }
